--- a/SistemAgendamento/frontend/styles/Home.module.scss
+++ b/SistemAgendamento/frontend/styles/Home.module.scss
@@ -1,4 +1,54 @@
+.ContainerCenter{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--gray-900);
+}
 
+.login{
+   margin-top: 2rem;
+   width: 600px;
+   display: flex;
+   align-items: center;
+   background-color: rgba(128, 128, 128, 0.767);
+   justify-content: center;
+   flex-direction: column;
+   padding: 3rem 1.5rem;
+   border-radius: 20px;
 
+    form{
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
 
+    form button{
 
+        height: 40px;
+        font-size: 1.2rem;
+
+    }
+
+    h1{
+        color: var(--white);
+        display: flex;
+        padding-bottom: 1.5rem;
+        justify-content: center;
+    }
+    
+}
+
+.text{
+    margin-top: 1rem;
+    color: var(--white);
+    cursor: pointer;
+}
+
+@media (max-width: 600px ){
+    .login{
+        width: 90%;
+    }
+}
+    
