--- a/SistemAgendamento/frontend/src/pages/dashboard/styles.module.scss
+++ b/SistemAgendamento/frontend/src/pages/dashboard/styles.module.scss
@@ -47,16 +47,17 @@
         align-items: center;
         justify-content: space-between;
         flex-direction: row;
-        border-radius: 0.3rem;
+        border-radius: 0.9rem;
         margin-bottom: 1rem;
         background-color: var(--dark-700);
+        font-weight: 600;
 
        
 
         button {
             width: 100%;
-            min-width: 500px;
-            height: 60px;
+            min-width: 100px;
+            height: 80px;
             background: transparent;
             font-size: 1.2rem;
             align-items: center;
@@ -69,11 +70,11 @@
         }
 
         .tag {
-            background-color: rgb(90, 52, 52);
-            width: 9px;
-            height: 60px;
+            background-color: rgb(109, 94, 94);
+            width: 20px;
+            height: 80px;
             margin-right: 1rem;
-            border-radius: 0.3rem;
+            border-radius: 0.4rem;
             position: absolute;
             margin-right: 1.4rem;
         }
@@ -83,4 +84,7 @@
         }
     }
 
+}
+.listarAgendamentos{
+    width: 80%;
 }
