--- a/SistemAgendamento/frontend/src/components/header/styles.module.scss
+++ b/SistemAgendamento/frontend/src/components/header/styles.module.scss
@@ -7,7 +7,7 @@
     height: 5rem;
     margin: 0;
     padding: 0 2rem;
-    background-color: rgba(128, 128, 128, 0.11) ;
+    background-color: rgba(128, 128, 128, 0.487) ;
     box-shadow:inset 20px 18px 16px 2px rgb(50 50 50 / 77%) ;
     display: flex;
     justify-content: space-between;
@@ -21,19 +21,25 @@
     nav{
         display: flex;
         align-items: center;
+        font-size: 1.2rem;
+        font-weight: 550;
+        padding-right: 1rem;
 
         a{
             color: var(--white);
             padding: 0.0.5rem;
             display: inline-block;
             position: relative;
+        
+
 
             & + a {
                 margin-left: 2rem;
             }
 
             &:hover{
-                color: var(--red-900);
+                color:black; 
+                
             }
         }
 
@@ -44,6 +50,7 @@
             transition: transform 0.9s;
 
             &:hover{
+                color:black !important; 
                 transform: scale(1.2);
             }
         }
