--- a/SistemAgendamento/frontend/src/components/modalAgendamento/styles.module.scss
+++ b/SistemAgendamento/frontend/src/components/modalAgendamento/styles.module.scss
@@ -26,8 +26,7 @@
         padding: 10px;
         width: 400px;
         min-height: 100px;
-        border-radius: 3px;
-
+        background-color:rgb(179, 176, 176) ;
 
     }
 
