--- a/SistemAgendamento/frontend/src/pages/dashboard/styles.module.scss
+++ b/SistemAgendamento/frontend/src/pages/dashboard/styles.module.scss
@@ -1,6 +1,6 @@
 .container {
 
-    min-height: 100vh;
+    min-height: 60vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,14 +8,13 @@
     margin-top: 3rem;
 
     .containerCenter {
-        min-height: 90vh;
+        min-height: 60vh;
         display: flex;
         align-items: center;
         flex-direction: column;
         width: 70%;
-        background-color: rgba(128, 128, 128, 0.767);
+        background-color: rgba(56, 53, 53, 0.8);
         min-width: 700px;
-        border-radius: 30px;
     }
 
     .Header {
@@ -26,12 +25,11 @@
         padding: 1.5rem;
         justify-content: space-between;
         margin-left: 2px;
-
-        h1 {
-            color: var(--white);
-        }
+        border-bottom: 1px solid black;
+        width: 100%;
 
         button {
+            padding-right: 2rem;
             background-color: rgba(128, 128, 128, 0);
             border: 0;
             margin-left: 30px;
@@ -49,10 +47,10 @@
         flex-direction: row;
         border-radius: 0.9rem;
         margin-bottom: 1rem;
-        background-color: var(--dark-700);
+        background-color: rgba(191, 183, 183, 0.422);
         font-weight: 600;
+        margin-top: 1rem;
 
-       
 
         button {
             width: 100%;
@@ -61,16 +59,17 @@
             background: transparent;
             font-size: 1.2rem;
             align-items: center;
+            font-weight: 550;
             display: flex;
             justify-content: space-between;
             border: 0;
-            color: white;
+            color: rgb(11, 4, 4);
             padding-right: 2rem;
 
         }
 
         .tag {
-            background-color: rgb(109, 94, 94);
+            background-color: rgb(42, 35, 35);
             width: 20px;
             height: 80px;
             margin-right: 1rem;
@@ -79,12 +78,21 @@
             margin-right: 1.4rem;
         }
 
-        .cliente{
+        .cliente {
             margin-left: 2rem;
         }
     }
 
 }
-.listarAgendamentos{
+
+.listarAgendamentos {
     width: 80%;
+}
+
+.emptyList {
+    padding-left: 5px;
+    margin-bottom: 1rem;
+    padding-top: 1rem;
+    font-weight: 400;
+    font-size: 1.2rem;
 }
