--- a/SistemAgendamento/frontend/src/components/ui/inputs/styles.module.scss
+++ b/SistemAgendamento/frontend/src/components/ui/inputs/styles.module.scss
@@ -12,3 +12,14 @@
 .input::placeholder{
     color: rgba(255,255,255,0.8);
 }
+
+.textArea{
+    margin-bottom: 1rem;
+    height: 100px;
+    border: 0px;
+    border-radius: 0.5rem;
+    background-color: var(--dark-900);
+    color: var(--white);
+    padding: 1rem;
+    border: 1px solid var(--gray-100); 
+}
