--- a/SistemAgendamento/frontend/src/components/ui/inputs/styles.module.scss
+++ b/SistemAgendamento/frontend/src/components/ui/inputs/styles.module.scss
@@ -14,12 +14,12 @@
 }
 
 .textArea{
-    margin-bottom: 1rem;
-    height: 100px;
+     height: 100px;
     border: 0px;
     border-radius: 0.5rem;
     background-color: var(--dark-900);
     color: var(--white);
     padding: 1rem;
-    border: 1px solid var(--gray-100); 
+    border: 1px solid var(--gray-100);   margin-bottom: 1rem;
+ 
 }
