--- a/SistemAgendamento/frontend/src/pages/agendamentos/Home.module.scss
+++ b/SistemAgendamento/frontend/src/pages/agendamentos/Home.module.scss
@@ -36,6 +36,15 @@
             width: 100%;
         }
 
+        .option {
+            margin-bottom: 1rem;
+            height: 40px;
+            border: 0px;
+            border-radius: 0.5rem;
+            background-color: var(--dark-900);
+            color: var(--white);
+            border: 1px solid var(--gray-100);
+        }
 
         .div1 {
             display: flex;
@@ -46,14 +55,11 @@
 
         .calendar {
             width: 60%;
-            margin: 50px;
+            margin: 10px;
 
         }
 
-        .botao{
-
-
-        }
+        .botao {}
     }
 
 
